@@ -116,8 +116,9 @@ BEGIN
     LTEXT           "",IDC_STC_DS,7,1,304,38
     CONTROL         "",IDLC_CAPS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_GROUP | WS_TABSTOP,7,39,304,148
     PUSHBUTTON      "Path...",IDB_PATH,7,190,33,12
-    EDITTEXT        IDC_EDIT1,46,190,265,12,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "Show UI",IDC_SHOWUI,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,7,215,76,8
+    EDITTEXT        IDC_SAVEPATH,46,190,265,12,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "Show UI",IDC_SHOWUI,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,7,204,76,8
+    CONTROL         "Keep Open",IDC_KEEPOPEN,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,17,215,76,8
     LTEXT           "Image Info",IDC_STATIC,319,7,237,8
     EDITTEXT        IDC_IMAGEINFO,319,16,237,48,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     LTEXT           "Extended Image Info",IDC_STATIC,319,71,237,8
