@@ -5,28 +5,13 @@
 #define IDM_ABOUTBOX                    0x0010
 #define IDD_ABOUTBOX                    100
 #define IDS_ABOUTBOX                    101
-#define IDD_MFC32_DIALOG                102
 #define IDD_MFC32_APP                   102
 #define IDR_MAINFRAME                   128
 #define IDD_TW_ENUMERATION              129
 #define IDD_MFC32_CONFIGURE             130
-#define IDB_CONNECT_DSM                 1000
-#define IDC_STATUS                      1001
 #define IDL_DS                          1002
-#define IDC_CAP1                        1003
-#define IDC_CAP2                        1004
-#define IDC_CAP3                        1005
-#define IDC_CAP4                        1006
-#define IDC_CAP5                        1007
-#define IDC_CAP6                        1008
-#define IDC_CAP7                        1009
-#define IDL_CAPS                        1010
-#define IDC_CAP8                        1011
-#define IDC_CAP9                        1012
 #define IDB_CONNECT_DS                  1013
-#define IDB_DISCONNECT_DS               1014
 #define IDB_DEFAULT_DS                  1014
-#define IDB_DISCONNECT_DSM              1015
 #define IDB_SCAN                        1016
 #define IDC_STC_DS                      1017
 #define IDC_LIST1                       1018
@@ -34,10 +19,10 @@
 #define IDC_IMAGEINFO                   1019
 #define IDC_EXTIMAGEINFO                1020
 #define IDC_SHOWUI                      1021
-#define IDC_EDIT1                       1022
-#define IDC_BUTTON1                     1023
+#define IDC_SAVEPATH                    1022
 #define IDB_PATH                        1023
 #define IDLC_CAPS                       1024
+#define IDC_KEEPOPEN                    1025
 
 // Next default values for new objects
 // 
